en/9.1/config/logging.rst
============
Log settings
============

This page is generated by Machine Translation from Japanese.

Log file
========

The following summarizes the log file to output the |Fess| .

+-----------------------------------------------+----------------------------------------------------------------------------------------+
| File name                                     | Contents                                                                               |
+-----------------------------------------------+----------------------------------------------------------------------------------------+
| webapps/fess/WEB-INF/logs/fess.out            | |Fess| server log. Output logging operation in the management and search screens, etc.   |
+-----------------------------------------------+----------------------------------------------------------------------------------------+
| webapps/fess/WEB-INF/logs/fess\_crawler.out   | Crawl log. Crawling log output.                                                        |
+-----------------------------------------------+----------------------------------------------------------------------------------------+
| logs/Catalina.out                             | Log of the |Fess| Server (Tomcat). Tomcat logs are output.                               |
+-----------------------------------------------+----------------------------------------------------------------------------------------+
| logs/SOLR.log                                 | Log server |Fess| (Solr). SOLR relevant log output.                                      |
+-----------------------------------------------+----------------------------------------------------------------------------------------+

Table: Log file list


If you encounter problems to work check the log.

Log settings
============

Sets the output log information is at
webapps/fess/WEB-INF/classes/log4j.xml. By default output INFO level.

For example, better |Fess| up to document for Solr log if you want to
output in log4j.xml disconnect the commented-out section below.

::

    <logger name="jp.sf.fess.solr" >
        <level value ="debug" />
    </logger>

See the Log4J documentation if you need detailed settings for the log
output.

Communications content crawling
-------------------------------

You can check by changing the logging level of the HttpClient if you
want to check HTTP access when crawling content to solve the problem.

::

    <logger name="org.apache.http" >
        <level value ="debug" />
    </logger>

How to output debug log
-----------------------

to crawl, and change the priority tag from info to debug the output
debug log of all things.

::

    <priority value="info"/>
